json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,122 @@
 {
  "items": [
   {
+    "id": "l0wEiEYNTp2wpunZ8jZv1g",
+    "url": "https://landing.jobs/at/adevinta/senior-ios-engineer-productivity-team?utm_campaign=landing+rss&utm_content=Senior+iOS+Engineer+%28Productivity+Team%29&utm_medium=referral&utm_source=rss",
+    "title": "Senior iOS Engineer (Productivity Team)",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG_TECH1:k/t/w:bash/other/2",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:mapreduce/bigdata-ml/5",
+      "DBG_TECH1:k/t/w:python/python/4",
+      "DBG_TECH1:k/t/w:ruby/ruby/4",
+      "DBG_TECH1:techWeightMap:{python=4, other=2, dotnet=0, c=0, mobile=14, go=3, nodejs=1, bigdata-ml=5, ruby=4, apple=14, java=0, gamedev=0, php=0, embedded=0, frontend=1}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Adevinta",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 8, 2019 10:45:13 AM",
+    "validThrough": "Oct 15, 2019 10:45:13 AM",
+    "crawled": "Oct 8, 2019 11:07:41 AM",
+    "content": "<div><h3>Senior iOS Engineer (Productivity Team)</h3></div><div>Company: Adevinta</div><div>Location: </div><div>Requires Work Permit</div>Level: Senior<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Bash </li><li>Git </li><li>iOS </li><li>Python </li><li>Ruby </li><h3>Intro</h3><p></p><p>We are a global digital player, the biggest marketplace specialist in Europe. But we are still a family of local brands – because we believe all great marketplaces are local. Our marketplaces serve people where they live, acknowledging what’s special about every culture and every place, helping local economies to grow sustainably.</p><p><span><span></span></span></p><p></p><p>Our systems are global-scale deployments of different services such as developer productivity tools, image and message processing systems, active and passive security scanning, big data and mapreduce clusters, messaging brokers, database and NoSQL Back-ends and many more. We specifically have to support hundreds of services and hundreds of instances for our millions of consumers, using service discovery systems, auto-scaling, dynamic load balancing and routing.<br><br>Scientists and engineers in our teams work to make hundreds of millions of user behaviour events from all around the world understandable for analysts and business users in the company, daily. This large data set is also one of the most diverse data sets in the world and we work with the latest data technologies (Spark, AWS services, Kafka). Tens of thousands of tasks are run every day to handle data processing jobs at this scale.</p><p>As a&nbsp;<strong>Senior iOS Engineer</strong>&nbsp; you will:&nbsp;</p><ul><ul><li>Be responsible for Adevinta’s global iOS CI/CD tooling and services, identifying gaps and developing improvements to its components as necessary</li><li>Represent the interests of the mobile community in front of Platform Services owners and teams. Acting as a stakeholder for mobile inside Platform Services and making sure its portfolio aligns to the interests of the mobile community across Adevinta</li><li>Promote Platform Services tools within Adevinta marketplaces helping them understand and leverage our global tool offering</li><li>Have a strong awareness and involvement in the mobile development community in Adevinta. Expected to reach out to mobile teams and engineers to understand their point of view, environment and needs and seeking opportunities for promotion of local tools into the Platform Services offering</li><li>Seek opportunities to temporarily join any marketplace team when this would help to directly address mobile development needs/issues</li><li>Be responsible for the long term development of technologies within the mobile domain</li></ul></ul><p></p><h4>Main requirements</h4><ul><li>Experience in iOS development and build pipeline</li><li>Good knowledge of Python, Ruby or bash scripting</li><li>Strong troubleshooting and problem-solving skills</li><li>Proactive attitude to help and support developers across the company</li><li>Strong understanding of iOS development workflows, CI, CD and modern development tools like Git, Travis, Fastlane</li><li>Good level of English (working language)</li><li>Comfortable working with multiple stakeholders and distributed teams</li></ul><p></p><h4>Perks</h4><p></p><ul><li>Choose your Kit (Computer &amp; Phone) ,,</li><li>Flexible work schedule &amp; ability to WFH a couple of days a week&nbsp;</li><li>Private Medical Insurance (including in-office Doctor)</li><li>Gym Membership (70% discount) &amp; Physiotherapist in-office (50% discount)</li><li>Travel Insurance</li><li>Flex Benefits (Ticket Restaurant, Transport Ticket etc.)</li><li>Company &amp; Personal Performance Bonus</li><li>Social activities (meetups, talks hosted in the office &amp; parties)&nbsp;</li><li>Free breakfast, fresh fruit &amp; coffee &amp; canteen in the office</li><li>Able to go to conferences &amp; courses&nbsp;</li><li>Free Language Lessons</li><li>Adjustable desks, chairs &amp; various work spaces</li></ul><p></p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "JlHIapHySu60V0BGx9TB7g",
+    "url": "https://remoteok.io/jobs/75499",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``OR(work,2W(work,remot)) 3W from 2W OR(wherev,wherev,where)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/20",
+      "DBG_TECH1:k/t/w:ios/mobile/20",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=38, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=28, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "komoot",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 7, 2019 7:02:55 PM",
+    "validThrough": "Oct 14, 2019 7:02:55 PM",
+    "crawled": "Oct 7, 2019 7:30:43 PM",
+    "content": "<span></span> <span><h4>komoot</h4></span> <br> <h3>Ios Developer</h3> <span></span> <span>verified</span> <br> <span>UTC-1 to UTC+3</span> <div>  <div>   **Millions of people experience real-life adventures with our apps. We help users all over the world discover the best hiking and biking routes, and we empower everybody to explore more of the great outdoors. And we’re good at it: Apple even included our iOS app in its Editors’ Choice collection and named us as one of their Apps of the Year.&nbsp;**\\n\\nIf you’d like to help to build the future of outdoor exploration, we’re looking for a passionate iOS Developer to join our team. This is a remote role and can be done from any location between UTC-1 and UTC+3.\\n\\n**Why you will love it**\\n* You’ll tangibly enable millions of people to have awesome outdoor experiences with your app\\n* At komoot, you’ll use everything the iOS platform offers, from the latest APIs to the newest features and devices\\n* We let you work from wherever you want, be it a beach, the mountains, our headquarters in Potsdam or anywhere else that lies in any time zone between UTC-1 and UTC+3.\\n* You’ll work on challenging tasks, such as turn-by-turn navigation, maps, on-/offline hybrids, custom views and data synchronization\\n* You’ll be developing in fast cycles with continuous build, testing and direct team feedback\\n* Your expert knowledge will make you a key player amongst a team of highly motivated, talented people\\n* You’ll travel together with our team to amazing outdoor places several times a year to exchange ideas, learnings and go for hikes and rides\\n* You’ll build and improve an app that we’re pretty sure you’ll end up using for your personal outdoor trips \\n\\n\\n\\n# Responsibilities\\n **What you will do**\\n* Take over responsibility of all parts of the iOS app\\n* Develop innovative new features in collaboration with our team of designers, copywriters, and Android/iOS product experts\\n* Optimize the core functionality of the app\\n* Incorporate the latest advances in iOS technology\\n \\n\\n# Requirements\\n**You will be successful in this position if you**\\n* Are highly self-driven, responsible and keen to improve\\n* Have proven experience in developing high quality iOS apps (3+ years)\\n* Write the latest Swift code and you know how to mix it with existing Objective-C code\\n* Have a deep understanding about iOS, its frameworks and APIs\\n* Have a passion for building software, demonstrated through interesting side projects, open source contributions or other involvement in the tech community\\n* Love to develop awesome products for a great user experience\\n* Have experience in working in a distributed team, have good communication skills and love to work together with others in fast development cycles\\n \\n\\n#Location\\n- UTC-1 to UTC+3   <br>  </div> </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "eopGD6htRDW9Im6TOEjlFg",
     "url": "https://weworkremotely.com/remote-jobs/komyoon-inc-ios-engineer",
     "title": "KOMYOON Inc.: iOS Engineer",
@@ -1780,126 +1896,6 @@
     "validThrough": "Aug 11, 2019 10:07:24 PM",
     "crawled": "Aug 9, 2019 3:06:25 AM",
     "content": "<div><p> My customer is currently looking to hire a remote iOS Developer for 2 - 3 months, to help build their application. They are a start-up developing a B2B product for a sales platform. You need to be available for onsite onboarding in Berlin for a period of 2-3 weeks, then the position will be remote thereafter.</p> <p> Tasks &amp; Responsibilities:</p>  Help build the application, implementing new features and improving existing.  Work towards using clean code, take part in design reviews with the team.  Bug fixing and Troubleshooting after the initial phase  Work closely with UX/UI to improve design standards <p> Your Profile:</p>  Minimum 2 years' experience in iOS (Swift) Development  Good knowledge of Cocoa  Experience with Firebase</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "hV4fPFYjT9qpToeGg-NXAg",
-    "url": "https://remote.co/job/ios-developer-14/",
-    "title": "iOS Developer",
-    "tags": [
-      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
-      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
-      "DBG:surround``fulltim 4N remot",
-      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
-      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
-      "DBG_TECH1:k/t/w:ios/apple/10",
-      "DBG_TECH1:k/t/w:ios/mobile/10",
-      "DBG_TECH1:k/t/w:objective-c/apple/3",
-      "DBG_TECH1:k/t/w:objective-c/c/2",
-      "DBG_TECH1:k/t/w:objective-c/mobile/8",
-      "DBG_TECH1:k/t/w:swift/apple/5",
-      "DBG_TECH1:k/t/w:swift/mobile/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=26, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=18, java=0, gamedev=0, php=0, embedded=0, frontend=1}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/America"
-    ],
-    "tagsNames1": [
-      "American time zones"
-    ],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "Signal Messenger",
-      "sameAs": "https://signal.org/"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Aug 8, 2019 5:43:44 PM",
-    "validThrough": "Aug 15, 2019 5:43:44 PM",
-    "crawled": "Aug 8, 2019 6:24:55 PM",
-    "content": "<h3>iOS Developer at <span>Signal Messenger</span></h3><div><span><i></i> Remote</span>        </div><div>            <p><strong>REMOTE (US ONLY)</strong></p><p><strong>IOS</strong></p><p><strong>FULLTIME</strong></p><p>Signal is hiring iOS developers to help make private communication simple. If you care about code quality as much as you care about user privacy, you should fit right in. This role is an opportunity to have an immediate impact while working closely with a talented team to solve challenging problems and ship new features to millions of users.</p><p><strong>Requirements</strong></p><ul><li>Extensive familiarity with iOS development and internals.</li><li>Comprehensive knowledge of Swift and Objective-C.</li><li>Experience being the architect of major new enhancements.</li><li>Capable of communicating effectively. We’re a small organization; you will be involved in every aspect.</li><li><strong>Degree in Computer Science or related field.</strong></li><li>5+ years of industry experience.</li></ul><p><strong>Benefits</strong></p><ul><li><strong>You can work anywhere in the United States.</strong>&nbsp;Whether it’s your favorite coffee shop or your living room, Signal gives you the flexibility to work wherever you will be most effective. We fly somewhere new once a quarter so that everyone can meet up in person.</li><li>Excellent healthcare, vision, and dental with all premiums covered.</li><li>Our 401(k) plan matches your contributions (without any vesting period) up to the employee federal maximum of $19,000.</li><li>We’re stable, well-funded, and capable of focusing on what is best for users without distractions.</li><li>Feel good about what you do. We believe in solving real problems, working with integrity, and sharing that work (and code) with everyone.</li></ul>        </div><div>        <a href='https://jobs.lever.co/signal/5d866dff-b979-4a90-9a53-f581eee730d0' rel='nofollow'>Apply for job</a>    </div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "hTjksedbT3WboCDeJyLblg",
-    "url": "https://jobmote.com/job/57958/ios-developer-remote/",
-    "title": "iOS Developer *REMOTE*",
-    "tags": [
-      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
-      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
-      "DBG_TECH1:k/t/w:animation/gamedev/8",
-      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
-      "DBG_TECH1:k/t/w:cocoa/apple/8",
-      "DBG_TECH1:k/t/w:core-data/apple/8",
-      "DBG_TECH1:k/t/w:ios/apple/14",
-      "DBG_TECH1:k/t/w:ios/mobile/14",
-      "DBG_TECH1:k/t/w:objective-c/apple/3",
-      "DBG_TECH1:k/t/w:objective-c/c/2",
-      "DBG_TECH1:k/t/w:objective-c/mobile/8",
-      "DBG_TECH1:k/t/w:php/php/5",
-      "DBG_TECH1:k/t/w:swift/apple/5",
-      "DBG_TECH1:k/t/w:swift/mobile/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=30, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=46, java=0, gamedev=8, php=5, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple"
-    ],
-    "hiringOrganization": {
-      "name": "Matlen Silver",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Aug 7, 2019 10:07:29 PM",
-    "validThrough": "Aug 10, 2019 10:07:29 PM",
-    "crawled": "Aug 8, 2019 3:06:25 AM",
-    "content": "<div><p>We are looking for an iOS developer responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. Your primary focus will be development of iOS applications and their integration with back-end services. You will be working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving, sophisticated design, and the creation of quality products is essential.</p> <p>Responsibilities</p> <ul><li>Design and build applications for the iOS platform</li> <li>Ensure the performance, quality, and responsiveness of applications</li> <li>Collaborate with a team to define, design, and ship new features</li> <li>Identify and correct bottlenecks and fix bugs</li> <li>Help maintain code quality, organization, and automatization</li></ul><p>Skills</p> <ul><li>Proficient with Objective-C or Swift, PHP, and Cocoa Touch</li> <li>Experience with iOS frameworks such as Core Data, Core Animation, etc.</li> <li>Experience with offline storage, threading, and performance tuning</li> <li>Familiarity with RESTful APIs to connect iOS applications to back-end services</li> <li>Knowledge of other web technologies and UI/UX standards</li> <li>Understanding of Apple s design principles and interface guidelines</li> <li>Knowledge of low-level C-based libraries is preferred</li> <li>Experience with performance and memory tuning with tools </li> <li>Familiarity with cloud message APIs and push notifications</li> <li>Knack for benchmarking and optimization</li> <li>Proficient understanding of code versioning tools </li> <li>Familiarity with continuous integration</li></ul> - provided by Dice</div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
