json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "bu00k7ySS1u0V1ibWFEQfA",
+    "url": "https://stackoverflow.com/jobs/303992/ios-developer-mahisoft-inc?a=1DWRPImBLk8E&so_medium=Talent&so_source=TalentApi",
+    "title": "iOS Developer at Mahisoft Inc  ",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:ios/apple/12",
+      "DBG_TECH1:k/t/w:ios/mobile/12",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=29, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=22, java=2, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Mahisoft Inc",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 11, 2019 5:06:35 PM",
+    "validThrough": "Oct 18, 2019 5:06:35 PM",
+    "crawled": "Oct 11, 2019 5:06:35 PM",
+    "content": "<h3><span>iOS Developer</span>                </h3>                    <h4>About this job</h4>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Agile Software Development, Mobile Development, Software Consulting</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>51–200 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Mahisoft Inc | No office location<br></div>                    <h4>Remote details</h4>                    <div>                        <div>                                                            <div>                                    <span>Preferred Timezone:</span>                                    <span>(GMT-05:00) Bogota +/- 2 hours</span>                                </div>                                                                                                            </div>                    </div>                <h4>Technologies</h4><div></div><div>ios</div><div>swift</div><div>sdk</div><div>java</div>                <h4>Job description</h4>                <div><p><strong><em>Senior iOS Developer</em></strong><em><span>,</span></em><em><span> with strong knowledge and vast experience in </span></em><em><span>Swift</span></em><em><span>, </span></em><em><span>SDKs and API(S) integration, and iOS SDK.</span></em></p>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/303992?reset=False&amp;ra=1DWRPImBLk8E&amp;oqs=a%3D1DWRPImBLk8E%26so_medium%3DTalent%26so_source%3DTalentApi' rel='nofollow'>Apply now</a></div><div>                                                                                                                                                            </div>            <h4>About Mahisoft Inc</h4>            <div><p><strong>Be part of the creation!</strong></p><p>We are looking to expand our world-class-team with enthusiastic and technology-passionate Software Craftsmen.</p><p><strong>What we offer</strong></p><p>At Mahisoft, you’ll get the chance to grow professionally and to work with a high-performance team of software engineers willing to help you meet your goals.</p><ul><li>Responsible freedom.</li><li>Technological upgrade.</li><li>Participation in high-tech projects.</li><li>Flexibility.</li><li>Teamwork and collaboration Constant capacitation.</li></ul><p><strong>What we expect</strong> from candidates It is important to us to expose ideas and to share knowledge, which is why we value these skills.</p><ul><li><strong>Systemic thinking.</strong> For us, it's important you have an excellent problem-solving skills and observe software as a living system with complex behaviour.</li><li><strong>Communication skills.</strong> It is key to optimize productivity and quality in software development teams with great communication, verbal and written Ability to mentor others.</li><li><strong>We're innovators</strong>&nbsp; and we value sharing of knowledge within the team.&nbsp;</li></ul>            </div>                            <h4>Benefits</h4>                    <ul>                            <li>                                <span></span>                                <span>Remote work</span>                            </li>                            <li>                                <span></span>                                <span>Work with cutting edge technologies</span>                            </li>                            <li>                                <span></span>                                <span>Work with highly qualified software engineers</span>                            </li>                            <li>                                <span></span>                                <span>Flexibility, responsible freedom</span>                            </li>                            <li>                                <span></span>                                <span>English classes</span>                            </li>                            <li>                                <span></span>                                <span>Competitive salaries</span>                            </li>                            <li>                                <span></span>                                <span>Radical Truth, Radical Transparency (RTRT)</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "l0wEiEYNTp2wpunZ8jZv1g",
     "url": "https://landing.jobs/at/adevinta/senior-ios-engineer-productivity-team?utm_campaign=landing+rss&utm_content=Senior+iOS+Engineer+%28Productivity+Team%29&utm_medium=referral&utm_source=rss",
     "title": "Senior iOS Engineer (Productivity Team)",
