--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,57 @@
 {
  "items": [
   {
+    "id": "Rl8k32VfQVStyvEzXAzaoQ",
+    "url": "https://jobmote.com/job/90286/healthcare-licensed-insurance-agent-work-from-home/",
+    "title": "Healthcare Licensed Insurance Agent - Work from Home",
+    "tags": [
+      "DBG:surround``from 4W your 2W home",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=0, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=1}",
+      "REMOTE1/100",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "TTEC",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 14, 2019 10:43:41 AM",
+    "validThrough": "Oct 17, 2019 10:43:41 AM",
+    "crawled": "Oct 14, 2019 3:06:32 PM",
+    "content": "<div><p>Empathetic Service oriented. Attentive. It's what connects us and we'd like to connect with you too! We are looking for you to help us deliver exceptional customer experiences as a work from home Healthcare Licensed Insurance Agent with TTEC. Say hello to saving gas/transportation money and growing your career with one of FlexJobs' 2019 Top 100 companies for remote jobs. Goodbye, commute!</p><p> </p><p><strong>About TTEC:</strong></p><p> </p><p>We help global brands provide a great experience to their customers, build customer loyalty, and grow their business. We were founded on one guiding principle: customer experiences that are simple, inspired, and more human deliver lasting value for everyone. Your role brings that principle to life.</p><p> </p><p><strong>Life at TTEC:</strong></p><p> </p><p>As a global company, we're always on. When one of us is going to bed, a coworker half-way around the world has already had their coffee (or tea) and is ready to grab the baton and run with it. We work at a fast pace around here and we're not one for keeping the status quo. But just because we're busy, it doesn't mean we don't know how to have fun. We're passionate about throwing company events that bring us together to laugh and celebrate each other's achievements. We're also big on taking time out for professional development and giving back. So, if you're looking for a work-life full of purpose, passion and career potential, keep reading </p><p> </p><p><strong>As a TTEC Customer Experience Champion, You'll Enjoy:</strong></p><ul><li><div>Career advancement opportunities</div></li><li><div>Employee Rewards and Employee Discounts</div></li><li><div>Continuous training and mentoring lots of learning for aspiring minds</div></li><li><div>Diverse, inclusive, and community-minded organization</div></li><li><div>A fun and encouraging remote work group</div></li></ul><p><strong>What You'll be Doing:</strong> </p><p> </p><p>Do you have a passion for helping others and giving them peace of mind? Whether it's getting answers for customers quickly, consulting on health-related products with compassion or resolving their issues with a smile, you'll be the difference between their customer experience being just average or an exceptional one. </p><p> </p><p>We'll train you to be a subject matter expert in your field, so you can be confident in providing the highest level of service possible. And we trust you already have the necessary ingredient that can't be taught-a caring and supportive nature that will shine through as you help customers through some of the more difficult times in their lives. You'll also have a chance to make great new friends and grow your career in a high-energy, family-friendly atmosphere. All from the comfort of your own home.</p><p> </p><p><strong>On a typical day, you'll:</strong></p><ul><li><div>Consult with customers on health-related products and services to provide the best solutions for their health and financial well-being</div></li><li><div>Assist Medicare-eligible individuals in selecting the products and services that best meets their needs</div></li><li><div>Answer questions related to coverage and annual changes on healthcare plans, pharmacy networks and drug formularies</div></li><li><div>Aid customers with the enrollment process</div></li><li><div>Qualify customers to join community meetings and schedule in-home appointments </div></li></ul><p><strong>Why You? What You Bring:</strong></p><p> </p><p>Empathetic. Service oriented. Attentive. It's what connects us Does this describe you as well?</p><ul><li><div>A current health insurance license</div></li><li><div>You've done the sales thing at least six months.</div></li><li><div>We're looking for you to come with excellent communication skills.</div></li><li><div>You adapt to new and different situations, read the behaviors of others, have difficult conversations with ease, and defuse and resolve conflict. In other words, you have the gift of gab. Empathy is the key.</div></li><li><div>An ability to adapt and excel in a dynamic work environment</div></li><li><div>High school graduate or equivalent</div></li><li><div>Handy with MS Windows and other computer applications</div></li><li><div>The passion and drive to make a difference</div></li></ul><p>The technology basics you'll need:</p><ul><li><div>A dedicated telephone is required during employment (landline or cell phone) to ensure that you can be contacted throughout training and employment as needed</div></li><li><div>Your own computer that meet the technical specifications:<span></span></div></li><li><div>USB headset &amp; USB drive is required to access our systems</div></li></ul><p> </p><p> </p><p>Please note this role is not open in CA, ME, MD, NJ, RI, WI, OR, WA, NY, CT, MA, VT, HI, AK, DC, KY, NV, OH, IL or the Virgin Islands.</p><p> </p><p>If you're a military veteran, active duty guard or reserves, or a military spouse:</p><p>We value your experience and believe you're prepared and battlefield-ready in the civilian world to take on TTEC's most innovative and challenging projects. Your hands-on experience with globalization means you're prepared to interact with our clients and employees around the world. Overcoming adversity and adapting to change has prepared you to execute in our dynamic environment. We are looking for team members where leadership is baked in from Day One. Where innovation and disruption are part of your DNA. We know that no job is as important as serving one's country, but we hope you'll find delivering amazing customer experiences to be another purpose worth serving!</p><p> </p><p><strong>Career Changers welcome here:</strong></p><p>Time to change your career? Whether you've spent your career on the admin side in receptionist, assistant, or support roles or you've been in retail, restaurant or hospitality, we believe you have the skills it takes to join our healthcare associates team. </p><p> </p><p>For more information about TTEC, visit ttecjobs.com or search #ExperienceTTEC throughout social media to engage in the global conversation.</p><p> </p><p>As a condition of employment, TTEC requires all employees hired in the United States to successfully pass a background check, and, depending on the location and client program, to successfully pass a drug screening. TTEC is an Equal Opportunity Employer.</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "eBpdfm2UTqmQQ8blFXzK1w",
     "url": "https://jobmote.com/job/88421/sage-200-consultant-45-000-to-55-000-remote-working/",
     "title": "Sage 200 Consultant - £45,000 to £55,000 Remote Working!",
@@ -14962,55 +15013,6 @@
     "validThrough": "Aug 21, 2019 10:13:50 PM",
     "crawled": "Aug 15, 2019 11:06:32 AM",
     "content": "<p>I am looking for a co-founder CFO with experience in investments, who can help raise capital to launch a unique job board website. I will act as the CTO, having the technical skills to create the website and run all the marketing. I cannot offer financial compensation at this stage, but am willing to offer equity in the business for someone who can initially commit to some evening and weekend time.</p><br /><p>I'm based in Harlow, but am open to someone who can link up remotely from anywhere in the UK. I represent a Christian company, but welcome applications from all faiths or those with none, basing things on merit.</p>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "2BAy8a-RTz6gtGwu1nuYDA",
-    "url": "https://remote.co/job/scheduler-2/",
-    "title": "Scheduler",
-    "tags": [
-      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
-      "DBG:surround``avail 8W 2N( OR(core,busi), hour)",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/America/East"
-    ],
-    "tagsNames1": [
-      "US East time zone",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "Milrich Virtual Professionals",
-      "sameAs": "https://milrichvirtualprofessionals.com/"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 10,
-      "maxValue": 10,
-      "info": "",
-      "unit": "HOUR",
-      "parser": "SalaryParserLargeText",
-      "isEquity": false,
-      "formatted": "USD 10 /Hour"
-    },
-    "employmentType": "UNSET",
-    "published": "Aug 14, 2019 6:39:29 PM",
-    "validThrough": "Aug 21, 2019 6:39:29 PM",
-    "crawled": "Aug 14, 2019 7:31:21 PM",
-    "content": "<h3>Scheduler at <span>Milrich Virtual Professionals</span></h3><div><span><i></i> Remote</span>         | <span> Entry-level </span> | <span> Freelance </span> | <span> Part-time </span></div><div>            <p><strong>Contract Job</strong></p><ul><li>Availability Needed: At least a possible 4-hour block Monday through Friday between the hours of 9am-5pm (all or partial morning availability required)</li><li><strong>Number of Hours per week: 20-40</strong></li><li>Minimum availability of 20 hours each week during normal business hours is preferred</li><li>Compensation: starts at $10/hr</li></ul><p>Milrich Virtual Professionals, LLC is currently looking for Virtual Schedulers. Schedulers will be making calls on behalf of financial and insurance wholesalers to set up appointments for them with advisors. These may be cold calls and would require the scheduler to successfully navigate through a possible gatekeeper via phone and email to reach the financial advisor or the individual who handles the advisor’s calendar.</p><p>Your work week will be Monday through Friday, with work hours able to be scheduled between 9am-5pm.&nbsp;<em>You especially need to be available during normal business hours in the morning to qualify for this position based on your geographic location.</em>&nbsp;<strong><em>Some consideration may be given to Eastern Time Zone with morning and early afternoon availability.</em></strong></p><p><strong>Responsibilities:</strong></p><ul><li>Schedule appointments via phone and email for wholesalers to meet with advisors</li><li>Respond to emails/calls within one hour during 9am-5pm (most cases can be done from a smartphone)</li><li>Participate in team conference calls every other week on Thursdays at 11am PT</li></ul><p><strong>Desired skills:</strong></p><ul><li>Able to navigate between email, call log, call list, online phone system, online mapping system and wholesaler’s calendar without getting flustered</li><li>Attention to detail</li><li>Proficient in Google docs, knowledge of Excel, Word, and Outlook extremely helpful</li><li>Sales experience a plus</li></ul><p><strong>Requirements</strong></p><ul><li>Very comfortable making cold calls</li><li>Not easily rejected</li><li>Able to work independently and in a partnership with a wholesaler</li><li>Able to pass background check</li><li>Cheerful phone disposition</li><li>Able to talk on phone for 1-4 hours at a time with no interruptions (children, animals, etc.)</li><li>Desktop or laptop with current antivirus protection</li><li>High Speed and secure internet connection</li><li>Good phone connection (may use cell phone)</li><li>Computer skills: Able to troubleshoot when systems are not working properly, know how to open an Excel spreadsheet and copy the information into another program</li></ul>        </div><div>        <a href='https://milrichvirtualprofessionals.com/careers/' rel='nofollow'>Apply for job</a>    </div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
