json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,70 @@
 {
  "items": [
   {
+    "id": "nV4yNhDfRsa4mAVglfrzsw",
+    "url": "https://www.42jobs.io/react/jobs/8321-react-native-developer",
+    "title": "React Native Developer",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:ant/java/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:reactjs/frontend/24",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:twitter-bootstrap/frontend/8",
+      "DBG_TECH1:k/t/w:typescript/frontend/1",
+      "DBG_TECH1:k/t/w:typescript/nodejs/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=16, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=35, java=9, gamedev=8, php=0, embedded=0, frontend=33}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/frontend",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Springboard Retail",
+      "sameAs": "https://www.springboardretail.com/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 15, 2019 6:58:41 AM",
+    "validThrough": "Oct 22, 2019 6:58:41 AM",
+    "crawled": "Oct 15, 2019 7:07:32 AM",
+    "content": "<h3>React Native Developer</h3><div><p></p><p>Springboard Retail is the leading point of sale and retail management software, designed specifically to empower brands and retailers to harness their data and sell more profitably.&nbsp;</p><p>Springboard Retail is looking for a Native Application Developer to join our team. In this role, you will be responsible for the sophisticated design and consistent performance of our applications. You will work to maintain current functionality while also ensuring that we continually ship new features that achieve high utilization and user satisfaction. Given our requirements, it’s critical that you ensure that we integrate reliably with a variety of hardware and 3rd party software services. You will be working alongside other engineers and developers on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving, sophisticated design, and the creation of quality products is essential. You are excited by the challenge of rapidly delivering improvements to delight our customers and help their businesses thrive while at the same time maintaining the rock-solid stability required by a mission-critical system.</p><p><strong>Springboard Retail is a fully distributed team so this is a remote position</strong>. All of our processes are designed with a remote-first mindset.</p><p>RESPONSIBILITIES -&nbsp;</p><ul><li>Design and build applications for iOS, Android, and web platforms using React Native &amp; TypeScript</li><li>Ensure the performance and quality of applications</li><li>Collaborate with a team to define, design, and ship new features</li><li>Identify and correct bottlenecks and fix bugs</li><li>Help maintain code quality, organization, and automation</li><li>Develop integrations using third-party SDKs and APIs, including hardware&nbsp;</li><li>Supports the diagnosis of customer issues and resolution.</li><li>Become a Springboard Retail product expert</li></ul><p>REQUIREMENTS -&nbsp;</p><ul><li>3+ years of professional native application development experience.</li><li>Proficiency with Swift and Cocoa Touch</li><li>Experience with iOS frameworks such as Core Data, Core Animation, etc.</li><li>Experience with offline storage, threading, and performance tuning</li><li>Familiarity with REST APIs to connect iOS applications to backend services</li><li>Knowledge of UI design patterns and familiarity with UI frameworks like Bootstrap, Ant, Semantic-UI or Material</li><li>Understanding of Apple’s design principles and interface guidelines</li><li>Knowledge of low-level C-based libraries is preferred</li><li>Proficient understanding of code versioning tools such as Git</li><li>Familiarity with continuous integration</li><li>Working knowledge of the general mobile landscape, architectures, trends, and emerging technologies</li><li>Solid understanding of the full mobile development life cycle</li></ul><p>BENEFITS -&nbsp;</p><ul><li>Opportunity to collaborate with and learn from a tightly integrated, best-in-class team&nbsp;</li><li>Flexible work schedules</li><li><strong>Remote Engineering team</strong> designed to effectively collaborate regardless of time zone or location</li><li><strong>Remote Company</strong> that offers inclusive community programs and learning and development opportunities</li></ul><p></p><span>Apply now</span></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "bu00k7ySS1u0V1ibWFEQfA",
     "url": "https://stackoverflow.com/jobs/303992/ios-developer-mahisoft-inc?a=1DWRPImBLk8E&so_medium=Talent&so_source=TalentApi",
     "title": "iOS Developer at Mahisoft Inc  ",
@@ -1407,66 +1471,6 @@
     "validThrough": "Aug 19, 2019 10:07:29 PM",
     "crawled": "Aug 17, 2019 3:06:25 AM",
     "content": "<div><p> My customer is currently looking to hire a remote iOS Developer for 2 - 3 months, to help build their application. They are a start-up developing a B2B product for a sales platform. You need to be available for onsite onboarding in Berlin for a period of 2-3 weeks, then the position will be remote thereafter.</p> <p> Tasks &amp; Responsibilities:</p>  Help build the application, implementing new features and improving existing.  Work towards using clean code, take part in design reviews with the team.  Bug fixing and Troubleshooting after the initial phase  Work closely with UX/UI to improve design standards <p> Your Profile:</p>  Minimum 2 years' experience in iOS (Swift) Development  Good knowledge of Cocoa  Experience with Firebase</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "xlvpmo2BTmSi8zlBlokMRA",
-    "url": "https://landing.jobs/at/devexperts/ios-developer-in-porto-2019-8?utm_campaign=landing+rss&utm_content=iOS+Developer&utm_medium=referral&utm_source=rss",
-    "title": "iOS Developer",
-    "tags": [
-      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
-      "DBG_TECH1:k/t/w:cocoa/apple/16",
-      "DBG_TECH1:k/t/w:ios/apple/8",
-      "DBG_TECH1:k/t/w:ios/mobile/8",
-      "DBG_TECH1:k/t/w:java/java/2",
-      "DBG_TECH1:k/t/w:java/mobile/1",
-      "DBG_TECH1:k/t/w:objective-c/apple/6",
-      "DBG_TECH1:k/t/w:objective-c/c/4",
-      "DBG_TECH1:k/t/w:objective-c/mobile/16",
-      "DBG_TECH1:k/t/w:swift/apple/10",
-      "DBG_TECH1:k/t/w:swift/mobile/16",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=4, mobile=41, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=40, java=2, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/50",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "50% remote"
-    ],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "Devexperts",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Aug 16, 2019 9:57:39 AM",
-    "validThrough": "Aug 23, 2019 9:57:39 AM",
-    "crawled": "Aug 16, 2019 10:07:28 AM",
-    "content": "<div><h3>iOS Developer</h3></div><div>Company: Devexperts</div><div>Location: Porto, PT</div>Level: Intermediate<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Cocoa </li><li>iOS </li><li>Mobile Applications </li><li>Objective-C </li><li>SWIFT </li><h3>Intro</h3><p>Devexperts specialises in the development of highly sophisticated software solutions and services for the Financial Markets industry. Our clients are retail and institutional brokers, exchanges and buy-side firms, and our products cover a wide array of applications, from online and desktop trading execution platforms, risk management and fix gateways, to one of the industry’s most encompassing offer of real-time and historical data services.</p><p>We are now looking for an&nbsp;<strong>iOS Developer</strong>&nbsp;to join our team in Porto, who will:</p><ul><li>Participate in the development of client-server solutions for mobile platforms</li><li>Create and troubleshoot the code, participate in designing solution architecture</li><li>Research new technologies, platforms and development tools</li><li>Be a part of a highly skilled and creative development team</li></ul><h4>Main requirements</h4><ul><li>Bachelor's or higher technical degree in Computer Science or a closely related field</li><li>2+ years of experience in Software Development</li><li>Solid knowledge of common data structures and algorithms</li><li>Knowledge of OOP principles and the ability to implement them in practice</li><li>Solid knowledge of Objective-C</li><li>Good knowledge of Cocoa framework</li><li>Good communication skills</li><li>Ability to search for required information without assistance, share knowledge with the team</li></ul><h4>Nice to have</h4><ul><li>Experience with financial, brokerage or exchange-related software</li><li>Experience in Swift development</li><li>Knowledge of Java</li><li>Knowledge of Design Patterns</li><li>Relation DB principles and structure, knowledge of SQL</li><li>User Interface design and usability design experience</li></ul><h4>Perks</h4><ul><li>Flexible schedules</li><li>Possibility to work remotely</li><li>Paid vacation 22 days</li><li>Insurance coverage for you and your children</li><li>Partial reimbursement for&nbsp;gym memberships</li><li>A modern office with all the features you need to strive, from&nbsp;well-equipped workspaces to available food and drinks<br></li></ul>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
